--- a/Email/index.html
+++ b/Email/index.html
@@ -12,7 +12,15 @@
 </head>
 
 <body>
+    <div class="container">
+        <h1>Login</h1>
 
+        <div class="email">
+            Your email is: 
+            <span class="input-email"></span>
+        </div>
+        <div class="message"></div>
+    </div>
 
     <script src="js/script.js"></script>
 </body>
